<resources>
    <string name="app_name">내위치는 지금</string>
    <string name="title_activity_maps">Now</string>
    <string name="text_gpsView">Here is ...\n</string>
    <string name="text_locationView">서울시 중구 소공로 48</string>
    <string name="button_update">Update</string>
    <string name="notice01">바로 현재 위치를 업데이트 하고 싶다면 버튼을 눌러주세요.\n데이터베이스에 바로 위치가 저장됩니다.\n</string>
    <string name="notice02">현재 3분마다 위치가 데이터베이스에 저장되는 중입니다. </string>
</resources>
