<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".MainActivity" >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/gpsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_gpsView"
            android:textColor="#000000"
            android:textSize="24sp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/locationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_locationView"
            android:textColor="#000000"
            android:textSize="24sp"
            android:layout_gravity="center" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="30sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notice01_View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice01"
            android:textColor="#777777"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/notice02_View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice02"
            android:textColor="#777777"
            android:textSize="15sp"
            android:layout_gravity="center" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:text="@string/button_update"
        android:textSize="22sp"
        android:layout_marginTop="80sp"/>

</androidx.appcompat.widget.LinearLayoutCompat>